--- a/src/App.css
+++ b/src/App.css
@@ -175,4 +175,16 @@ body {
   color: azure;
 }
 
+.footer {
+  color:black;
+  padding: 40px 0;
+  text-align: left;
+}
+
+.footer .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+
 
