Solved the link issue for the Home and Footer component

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,10 @@ body {
   font-weight: bold;
 }
 
+.main-menu-item-active:hover {
+  color: #ffffff;
+  text-shadow: #ffffff 0 1px;
+}
 
 /* .menu-list-items.active {
   color: black;
