--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: Arial, sans-serif;
-  background-color: rgb(221, 212, 212) ;
-  padding: 60px 10px 20px;
-  min-height: 100vh;
+  background-color: #f0f0f0;
   display: flex;
   flex-direction: column;
 }
@@ -73,7 +73,12 @@ body {
   height: 50px;
   border-radius: 50%;
 }
-
+.main-container {
+  padding: 20px;
+}
+.component-wrapper {
+  margin-top: 20px;
+}
 
 .main-menu-container {
   flex: 1;
